k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seeidp-redis
  namespace: seeidp
spec:
  selector:
    app: seeidp-redis
  ports:
    - port: 6379
      targetPort: 6379
