k8s/idp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seeidp
  namespace: seeidp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - idp.example.com # Replace with your domain
      secretName: seeidp-tls
  rules:
    - host: idp.example.com # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seeidp
                port:
                  number: 80
